setting up backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
 streamlit
 streamlit-webrtc
+streamlit-ace
+audio-recorder-streamlit
 deepgram-sdk
-mediapipe
+openai
 numpy
 opencv-python
+pydub
+Pillow
+transformers
+torch
+pygame
+moviepy
+speechrecognition
+python-dotenv
+langchain-core
+phi
 groq
-audio-recorder-streamlit
+google-generativeai
